[project]
name = "rust_math"
version = "0.1.0"
description = "A simple math library written in Rust"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]
license = {text = "MIT"}

[build-system]
requires = ["maturin>=0.14.0"]
build-backend = "maturin"